Add the assistant_actions component

--- a/src/client/stylesheets/assistant.less
+++ b/src/client/stylesheets/assistant.less
@@ -1,3 +1,11 @@
 /*
  * pwix:assistant/src/client/stylesheets/assistant.less
  */
+
+ .assistant-actions button {
+    --bs-btn-border-color: lightgray;
+}
+.assistant-actions button:hover {
+    --bs-btn-hover-bg: gray;
+    --bs-btn-hover-color: lightgray;
+}
