Upgrade pwix:tabbed to v 1.3.0

--- a/src/client/stylesheets/assistant.less
+++ b/src/client/stylesheets/assistant.less
@@ -50,7 +50,7 @@
             background-color: inherit;
             border: none;
         }
-        .nav-link.ca-inactive {
+        .nav-link.ui-inactive {
             cursor: default;
             pointer-events: none;
         }
@@ -61,10 +61,6 @@
             cursor: auto;
             border: none;
             color: var( --bs-nav-link-color );
-        }
-        .nav-link.disabled {
-            font-style: italic;
-            color: gray;
         }
     }
 }
